--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+/* styles/globals.css */
+@import '~antd/dist/antd.css';
+
 
 :root {
   --foreground-rgb: 0, 0, 0;
