--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-/* styles/globals.css */
-@import '~antd/dist/antd.css';
+
+
+@import 'antd/dist/reset.css';
+
 
 
 :root {
